# ozon_parser

./: alembic.ini  docker-compose.yml  pyproject.toml
app/: alembic.ini
app/adapter/: __init__.py  request.py
app/adapter/ozon/: __init__.py  parser.py
app/config/: __init__.py  settings.py
app/db/: __init__.py  connect.py
app/entrypoints/: __main__.py  main.py
app/routers/v1/: ozon.py
app/schema/ozon/: __init__.py  product.py
app/services/: parse.py
app/services/ozon/: __init__.py  parse.py
ozon-parser/adapter/ozon/: parser.py
ozon-parser/entrypoints/: __main__.py  main.py
ozon-parser/routers/v1/: __init__.py
ozon-parser/schema/: parse.py
ozon-parser/services/ozon/: __init__.py
ozon_parser/: alembic.ini
ozon_parser/adapter/: __init__.py
ozon_parser/adapter/ozon/: __init__.py  parser.py
ozon_parser/alembic/: env.py
ozon_parser/alembic/versions/: 3e8b68cadf04_update_field.py  cad9792c4415_init_product.py  e76d7f43a08c_initial_tables.py
ozon_parser/config/: __init__.py  settings.py
ozon_parser/db/: __init__.py  db.py  models.py  repository.py
ozon_parser/entrypoints/: __main__.py  main.py
ozon_parser/routers/v1/: ozon.py
ozon_parser/schema/: __init__.py  parse.py
ozon_parser/schema/ozon/: __init__.py  product.py
ozon_parser/services/ozon/: __init__.py  parse.py
ozon_parser/worker/: __init__.py  consumer.py  producer.py
