[tool.poetry]
name = "ozon-parser"
version = "0.1.0"
description = ""
authors = ["aleksey.matveev <aleksey.matveev@alarislabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic-settings = "^2.6.1"
uvicorn = "^0.32.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
alembic = "^1.14.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
