[tool.poetry]
name = "ozon-parser"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
pydantic-settings = "^2.6.1"
aio-pika = "^9.5.1"
alembic = "^1.14.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
syncpg = "^1.1.3"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
